Added domain model classes, added hibernate support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.h2.console.path=/h2-console
 spring.datasource.name=app_db
 
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
